--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <div class="row align-items-center">
           <div class="col-lg-5 ml-auto">
             <h1 class="text-white">World Cup Event</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
+            <p>Welcome to our football website, the ultimate destination for football fans around the world! Our website is dedicated to providing you with the latest news, analysis, and insights into the world of football.
+            </p>
             <div id="date-countdown"></div>
             <p>
               <a href="https://www.fifa.com/fifaplus/en/tickets" class="btn btn-primary py-3 px-4 mr-3">Book Ticket</a>
